--- a/start page/index.html
+++ b/start page/index.html
@@ -3,11 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Background Image Example</title>
+    <title>Welcome to Psyche</title>
     <link rel="stylesheet" href="style.css" />
+    <!-- Link to external CSS file -->
   </head>
   <body>
-    <!-- Start Button -->
+    <!-- Welcome Message -->
+    <div class="welcome-container">
+      <h1>Welcome to Psyche</h1>
+      <p>Click Start to Begin</p>
+    </div>
+
+    <!-- Start Button in the center -->
     <div class="center">
       <button id="startButton">Start</button>
     </div>
@@ -18,5 +25,6 @@
     </div>
 
     <script src="script.js"></script>
+    <!-- Link to external JavaScript file -->
   </body>
 </html>
