--- a/start page/index.html
+++ b/start page/index.html
@@ -14,15 +14,27 @@
       <p>Click Start to Begin</p>
     </div>
 
-    <!-- Start Button in the center -->
+    <!-- Start and Credits button in the center -->
     <div class="center">
       <button id="startButton">Start</button>
+      <button id="creditsButton">Credits</button>
     </div>
 
-    <!-- Next Page Placeholder -->
-    <div class="next-page" id="nextPage">
-      <h1>Welcome to the Next Page</h1>
+    <!-- Credits -->
+    <div id="creditsModal" class="modal">
+      <div class="modal-content">
+        <span class="close-button" id="closeCredits">&times;</span>
+        <h2>Credits</h2>
+        <p id="creditsText"> <!-- Created by Ash Ashour, Aureliano Ceballos, Dillon Garcia, Viet Le and NASA Psyche Team --> </p>
+      </div>
     </div>
+
+    <div class="next-page" id="nextPage">
+      <img id="nextPageImage" src="" alt="Next Page Image" style="display: none;" />
+    </div>
+
+    <!-- Click Sound -->
+    <audio id="clickSound" src="click.mp3" preload="auto"></audio>
 
     <script src="script.js"></script>
     <!-- Link to external JavaScript file -->
