--- a/start page/index.html
+++ b/start page/index.html
@@ -24,13 +24,20 @@
     <div id="creditsModal" class="modal">
       <div class="modal-content">
         <span class="close-button" id="closeCredits">&times;</span>
-        <h2>Credits</h2>
-        <p id="creditsText"> <!-- Created by Ash Ashour, Aureliano Ceballos, Dillon Garcia, Viet Le and NASA Psyche Team --> </p>
+        <h2>Credits And Disclaimers</h2>
+        <p id="creditsText">
+          <!-- Created by Ash Ashour, Aureliano Ceballos, Dillon Garcia, Viet Le and NASA Psyche Team -->
+        </p>
       </div>
     </div>
 
     <div class="next-page" id="nextPage">
-      <img id="nextPageImage" src="" alt="Next Page Image" style="display: none;" />
+      <img
+        id="nextPageImage"
+        src=""
+        alt="Next Page Image"
+        style="display: none"
+      />
     </div>
 
     <!-- Click Sound -->
