--- a/start page/asteroid3.html
+++ b/start page/asteroid3.html
@@ -148,22 +148,22 @@
     <!-- Transparent Navigation Bar -->
     <div id="topBar">
       <button
-        onclick="playClickSound(); showInfo('psyche_asteroid.jpg', 'Psyche is believed to be composed mostly of metal, primarily iron and nickel, making it unique among other asteroids.')"
+        onclick="playClickSound(); showInfo('Psyche_Artist_PRubin_Artists-Conception-of-the-Psyche-Asteroid_180205.jpeg', 'Psyche is believed to be composed mostly of metal, primarily iron and nickel, making it unique among other asteroids.')"
       >
         Composition
       </button>
       <button
-        onclick="playClickSound(); showInfo('psyche_asteroid.jpg', 'Psyche is one of the largest asteroids in the asteroid belt, measuring about 140 miles in diameter.')"
+        onclick="playClickSound(); showInfo('Psyche_Artist_PRubin_Artists-Conception-of-the-Psyche-Asteroid_180205.jpeg', 'Psyche is one of the largest asteroids in the asteroid belt, measuring about 140 miles in diameter.')"
       >
         Size and Location
       </button>
       <button
-        onclick="playClickSound(); showInfo('psyche_asteroid.jpg', 'NASA\'s Psyche mission will explore this metal-rich world to uncover clues about planetary cores.')"
+        onclick="playClickSound(); showInfo('Psyche_Artist_PRubin_Artists-Conception-of-the-Psyche-Asteroid_180205.jpeg', 'NASA\'s Psyche mission will explore this metal-rich world to uncover clues about planetary cores.')"
       >
         The Mission
       </button>
       <button
-        onclick="playClickSound(); showInfo('psyche_asteroid.jpg', 'Scientists theorize that Psyche could be the remnants of a failed protoplanet whose outer layers were stripped away.')"
+        onclick="playClickSound(); showInfo('Psyche_Artist_PRubin_Artists-Conception-of-the-Psyche-Asteroid_180205.jpeg', 'Scientists theorize that Psyche could be the remnants of a failed protoplanet whose outer layers were stripped away.')"
       >
         Psyche's Origin
       </button>
@@ -171,7 +171,11 @@
 
     <!-- Main Content -->
     <div id="mainContent">
-      <img id="asteroidImage" src="psyche_asteroid.jpg" alt="Psyche Asteroid" />
+      <img
+        id="asteroidImage"
+        src="Psyche_Artist_PRubin_Artists-Conception-of-the-Psyche-Asteroid_180205.jpeg"
+        alt="Psyche Asteroid"
+      />
       <div id="infoText">
         <div id="factContainer">
           <span id="factText"></span>
@@ -187,17 +191,17 @@
     <div
       id="leftArrow"
       class="nav-arrow"
-      onclick="window.location.href='index.html';"
+      onclick="window.location.href='asteroid2.html';"
     >
       ←
     </div>
-    <div
+    <!-- <div
       id="rightArrow"
       class="nav-arrow"
-      onclick="window.location.href='asteroid2.html';"
+      onclick="window.location.href='asteroid3.html';"
     >
       →
-    </div>
+    </div> -->
 
     <script>
       // Function to play the click sound
