--- a/start page/asteroid2.html
+++ b/start page/asteroid2.html
@@ -148,24 +148,24 @@
     <!-- Transparent Navigation Bar -->
     <div id="topBar">
       <button
-        onclick="playClickSound(); showInfo('Psyche_Mission_Psyche_-Asteroid_180105-1024x791.jpg', 'Psyche is believed to be composed mostly of metal, primarily iron and nickel, making it unique among other asteroids.')"
+        onclick="playClickSound(); showInfo('Psyche_Mission_Psyche_-Asteroid_180105-1024x791.jpg', 'This picture was drawn to believe that the asteroid is made up of 70% metals, while the rest are other minerals.')"
       >
-        Composition
+        Details
       </button>
       <button
-        onclick="playClickSound(); showInfo('Psyche_Mission_Psyche_-Asteroid_180105-1024x791.jpg', 'Psyche is one of the largest asteroids in the asteroid belt, measuring about 140 miles in diameter.')"
+        onclick="playClickSound(); showInfo('Psyche_Mission_Psyche_-Asteroid_180105-1024x791.jpg', 'Psyche orbits the Sun at an average distance of 3 astronomical units \(AU\) while Earth orbits at 1 AU.')"
       >
-        Size and Location
+        Orbital
       </button>
       <button
-        onclick="playClickSound(); showInfo('Psyche_Mission_Psyche_-Asteroid_180105-1024x791.jpg', 'NASA\'s Psyche mission will explore this metal-rich world to uncover clues about planetary cores.')"
+        onclick="playClickSound(); showInfo('Psyche_Mission_Psyche_-Asteroid_180105-1024x791.jpg', 'A day on Psyche is about 4 hours and 12 minutes.')"
       >
-        The Mission
+        Time
       </button>
       <button
-        onclick="playClickSound(); showInfo('Psyche_Mission_Psyche_-Asteroid_180105-1024x791.jpg', 'Scientists theorize that Psyche could be the remnants of a failed protoplanet whose outer layers were stripped away.')"
+        onclick="playClickSound(); showInfo('Psyche_Mission_Psyche_-Asteroid_180105-1024x791.jpg', 'It has an irregular shape and measures about 280 kilometers across at its widest point and 232 kilometers long, making it one of the most massive asteroids in main belt.')"
       >
-        Psyche's Origin
+        Shape
       </button>
     </div>
 
