--- a/start page/asteroid3.html
+++ b/start page/asteroid3.html
@@ -148,24 +148,24 @@
     <!-- Transparent Navigation Bar -->
     <div id="topBar">
       <button
-        onclick="playClickSound(); showInfo('Psyche_Artist_PRubin_Artists-Conception-of-the-Psyche-Asteroid_180205.jpeg', 'Psyche is believed to be composed mostly of metal, primarily iron and nickel, making it unique among other asteroids.')"
+        onclick="playClickSound(); showInfo('Psyche_Artist_PRubin_Artists-Conception-of-the-Psyche-Asteroid_180205.jpeg', 'This is the first picture drawn by the artist Peter Rubin. It was assumed that the asteroid is made completely out of metal.')"
       >
-        Composition
+        Details
       </button>
       <button
-        onclick="playClickSound(); showInfo('Psyche_Artist_PRubin_Artists-Conception-of-the-Psyche-Asteroid_180205.jpeg', 'Psyche is one of the largest asteroids in the asteroid belt, measuring about 140 miles in diameter.')"
+        onclick="playClickSound(); showInfo('Psyche_Artist_PRubin_Artists-Conception-of-the-Psyche-Asteroid_180205.jpeg', 'The huge craters are from multiple violent hit-and-run collisions with other asteroids.')"
       >
-        Size and Location
+        Craters
       </button>
       <button
-        onclick="playClickSound(); showInfo('Psyche_Artist_PRubin_Artists-Conception-of-the-Psyche-Asteroid_180205.jpeg', 'NASA\'s Psyche mission will explore this metal-rich world to uncover clues about planetary cores.')"
+        onclick="playClickSound(); showInfo('Psyche_Artist_PRubin_Artists-Conception-of-the-Psyche-Asteroid_180205.jpeg', 'Psyche\’s bulk density appears to be 3,400-4,100 kilograms per cubic meter.')"
       >
-        The Mission
+        Density
       </button>
       <button
-        onclick="playClickSound(); showInfo('Psyche_Artist_PRubin_Artists-Conception-of-the-Psyche-Asteroid_180205.jpeg', 'Scientists theorize that Psyche could be the remnants of a failed protoplanet whose outer layers were stripped away.')"
+        onclick="playClickSound(); showInfo('Psyche_Artist_PRubin_Artists-Conception-of-the-Psyche-Asteroid_180205.jpeg', 'It is 173 x 144 x 117 miles. If Psyche were in Arizona, it would stretch between Phoenix and Flagstaff.')"
       >
-        Psyche's Origin
+        Size
       </button>
     </div>
 
@@ -195,13 +195,13 @@
     >
       ←
     </div>
-    <!-- <div
+    <div
       id="rightArrow"
       class="nav-arrow"
-      onclick="window.location.href='asteroid3.html';"
+      onclick="window.location.href='asteroid4.html';"
     >
       →
-    </div> -->
+    </div>
 
     <script>
       // Function to play the click sound
