--- a/start page/index.html
+++ b/start page/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- Psyche Logo -->
+    <div class="logo-container">
+      <img src="logo.jpg" alt="Psyche Mission Logo" id="psycheLogo" />
+    </div>
+
     <!-- Welcome Message -->
     <div class="welcome-container">
       <h1>Welcome to Psyche</h1>
