Added TESTING to a string

--- a/asteroid3.html
+++ b/asteroid3.html
@@ -172,7 +172,7 @@
     <!-- Transparent Navigation Bar -->
     <div id="topBar">
       <button
-        onclick="playClickSound(); showInfo('Psyche_Artist_PRubin_Artists-Conception-of-the-Psyche-Asteroid_180205.jpeg', 'This is the first picture drawn by the artist Peter Rubin. It was assumed that the asteroid is made completely out of metal.'); updateProgress(8);"
+        onclick="playClickSound(); showInfo('Psyche_Artist_PRubin_Artists-Conception-of-the-Psyche-Asteroid_180205.jpeg', 'TESTING This is the first picture drawn by the artist Peter Rubin. It was assumed that the asteroid is made completely out of metal.'); updateProgress(8);"
       >
         Details
       </button>
