Moved images into a folder

--- a/start page/asteroid.html
+++ b/start page/asteroid.html
@@ -148,22 +148,22 @@
     <!-- Transparent Navigation Bar -->
     <div id="topBar">
       <button
-        onclick="playClickSound(); showInfo('psyche_asteroid.jpg', 'Psyche is believed to be composed mostly of metal, primarily iron and nickel, making it unique among other asteroids.')"
+        onclick="playClickSound(); showInfo('images/psyche_asteroid.jpg', 'Psyche is believed to be composed mostly of metal, primarily iron and nickel, making it unique among other asteroids.')"
       >
         Composition
       </button>
       <button
-        onclick="playClickSound(); showInfo('psyche_asteroid.jpg', 'Psyche is one of the largest asteroids in the asteroid belt, measuring about 140 miles in diameter.')"
+        onclick="playClickSound(); showInfo('images/psyche_asteroid.jpg', 'Psyche is one of the largest asteroids in the asteroid belt, measuring about 140 miles in diameter.')"
       >
         Size and Location
       </button>
       <button
-        onclick="playClickSound(); showInfo('psyche_asteroid.jpg', 'NASA\'s Psyche mission will explore this metal-rich world to uncover clues about planetary cores.')"
+        onclick="playClickSound(); showInfo('images/psyche_asteroid.jpg', 'NASA\'s Psyche mission will explore this metal-rich world to uncover clues about planetary cores.')"
       >
         The Mission
       </button>
       <button
-        onclick="playClickSound(); showInfo('psyche_asteroid.jpg', 'Scientists theorize that Psyche could be the remnants of a failed protoplanet whose outer layers were stripped away.')"
+        onclick="playClickSound(); showInfo('images/psyche_asteroid.jpg', 'Scientists theorize that Psyche could be the remnants of a failed protoplanet whose outer layers were stripped away.')"
       >
         Psyche's Origin
       </button>
@@ -171,7 +171,11 @@
 
     <!-- Main Content -->
     <div id="mainContent">
-      <img id="asteroidImage" src="psyche_asteroid.jpg" alt="Psyche Asteroid" />
+      <img
+        id="asteroidImage"
+        src="images/psyche_asteroid.jpg"
+        alt="Psyche Asteroid"
+      />
       <div id="infoText">
         <div id="factContainer">
           <span id="factText"></span>
