--- a/start page/index.html
+++ b/start page/index.html
@@ -9,7 +9,7 @@
   <body>
     <!-- Psyche Logo -->
     <div class="logo-container">
-      <img src="logo.jpg" alt="Psyche Mission Logo" id="psycheLogo" />
+      <img src="images/logo.jpg" alt="Psyche Mission Logo" id="psycheLogo" />
     </div>
 
     <!-- Welcome Message -->
