--- a/asteroid.html
+++ b/asteroid.html
@@ -172,22 +172,22 @@
     <!-- Transparent Navigation Bar -->
     <div id="topBar">
       <button
-        onclick="playClickSound(); showInfo('psyche_asteroid.jpg', 'Psyche is believed to be composed mostly of metal, primarily iron and nickel, making it unique among other asteroids.'); updateProgress(0);"
+        onclick="playClickSound(); showInfo('images/psyche_asteroid.jpg', 'Psyche is believed to be composed mostly of metal, primarily iron and nickel, making it unique among other asteroids.'); updateProgress(0);"
       >
         Composition
       </button>
       <button
-        onclick="playClickSound(); showInfo('psyche_asteroid.jpg', 'Psyche is one of the largest asteroids in the asteroid belt, measuring about 140 miles in diameter.'); updateProgress(1);"
+        onclick="playClickSound(); showInfo('images/psyche_asteroid.jpg', 'Psyche is one of the largest asteroids in the asteroid belt, measuring about 140 miles in diameter.'); updateProgress(1);"
       >
         Size and Location
       </button>
       <button
-        onclick="playClickSound(); showInfo('psyche_asteroid.jpg', 'NASA\'s Psyche mission will explore this metal-rich world to uncover clues about planetary cores.'); updateProgress(2);"
+        onclick="playClickSound(); showInfo('images/psyche_asteroid.jpg', 'NASA\'s Psyche mission will explore this metal-rich world to uncover clues about planetary cores.'); updateProgress(2);"
       >
         The Mission
       </button>
       <button
-        onclick="playClickSound(); showInfo('psyche_asteroid.jpg', 'Scientists theorize that Psyche could be the remnants of a failed protoplanet whose outer layers were stripped away.'); updateProgress(3);"
+        onclick="playClickSound(); showInfo('images/psyche_asteroid.jpg', 'Scientists theorize that Psyche could be the remnants of a failed protoplanet whose outer layers were stripped away.'); updateProgress(3);"
       >
         Psyche's Origin
       </button>
@@ -195,7 +195,11 @@
 
     <!-- Main Content -->
     <div id="mainContent">
-      <img id="asteroidImage" src="psyche_asteroid.jpg" alt="Psyche Asteroid" />
+      <img
+        id="asteroidImage"
+        src="images/psyche_asteroid.jpg"
+        alt="Psyche Asteroid"
+      />
       <div id="infoText">
         <div id="factContainer">
           <span id="factText"></span>
